# EETGW

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  gradlew  gradlew.bat  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  DataTypes.h  JniHelpers.h  MetadataCache.cpp  MetadataCache.h  Mp3Engine.cpp  Mp3Engine.h  Mp4Engine.cpp  native_bridge.cpp
app/src/main/cpp/fdk-aac/lib/: .gitkeep
app/src/main/cpp/minimp3/: .gitkeep
app/src/main/cpp/minimp4/: .gitkeep
app/src/main/cpp/oboe/: .gitkeep
app/src/main/java/com/eetgw/: EETGWApplication.kt  MainActivity.kt
app/src/main/java/com/eetgw/jni/: NativeBridge.kt
app/src/main/java/com/eetgw/service/: PlaybackService.kt
app/src/main/java/com/eetgw/ui/: PlayerScreen.kt  RunningModeScreen.kt
app/src/main/java/com/eetgw/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_music_note.xml  ic_pause.xml  ic_play.xml  ic_skip_next.xml  ic_skip_prev.xml  ic_stop.xml
app/src/main/res/mipmap/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml
docs/: ARCHITECTURE.md  BUILD.md
docs/screenshots/: .gitkeep
scripts/: build-fdk-aac.sh
